--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
